feat: chatbox enter key integrated aswell as handle name colors

--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,12 @@ body {
   font-family: sans-serif;
 }
 
+.handleColor {
+  color: blue;
+  font-weight: bold;
+  padding: 5px;
+}
+
 a {
   text-decoration: none;
 }
