feat: chatbox scroll locked to bottom, object being sent through socket, color distinguishes clients

--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,15 @@
 body {
   font-family: sans-serif;
 }
-
+/* this is the chat box stuff */
 .handleColor {
   color: blue;
+  font-weight: bold;
+  padding: 5px;
+}
+
+.handleColor-rec {
+  color: red;
   font-weight: bold;
   padding: 5px;
 }
