--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,21 @@
 body {
   font-family: sans-serif;
 }
+
+/* messing with buttons for a sec bro */
+.testButtons {
+  background: purple;
+  color: #fff;
+  font-size: 30px;
+  border: 2px black;
+  border-radius: 30px 30px 30px 30px;
+  width: 100%;
+}
+
+.buttonContainer {
+  padding: 10px;
+}
+
 /* this is the chat box stuff */
 .handleColor {
   color: blue;
@@ -97,7 +112,7 @@ input {
   font-size: 16px;
 }
 
-button {
+#send {
   background: Green;
   color: #fff;
   font-size: 18px;
