feat: scoreboard functionality

--- a/public/style.css
+++ b/public/style.css
@@ -16,6 +16,24 @@ body {
   padding: 10px;
 }
 
+/* scoreboard stuff */
+
+#scoreboard {
+  height: 200px;
+  width: 400px;
+  /* max-width: 600px; */
+  margin: 30px auto;
+  border: 1px solid #ddd;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.05);
+  border-radius: 2px;
+}
+
+#scorewindow {
+  height: 100px;
+  overflow: auto;
+  background: #f9f9f9;
+}
+
 /* this is the chat box stuff */
 .handleColor {
   color: blue;
