--- a/public/style.css
+++ b/public/style.css
@@ -88,7 +88,7 @@ form div {
 
 body {
   font-family: 'Nunito';
-  background-image: url(/greenstuff.png)
+  background-image: url(/greentile.png)
   /* background-color: #A0E7E5; */
 }
 
