--- a/public/style.css
+++ b/public/style.css
@@ -47,9 +47,9 @@ body {
   height: 200px;
   width: 400px;
   /* max-width: 600px; */
-  background-color: #DFE0E2;
+  background-color: #64DFDF;
   margin: 30px auto;
-  font-family: fantasy;
+  font-family: 'Raleway', 'sans-serif';
   border: 1px solid #3f51b5;
   box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.05);
   border-radius: 2px;
@@ -116,10 +116,10 @@ h2 {
   max-width: 600px;
   margin: 30px auto;
   border: 2px solid #3f51b5;
-  background-color: #DFE0E2;
+  background-color: #64DFDF;
   box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.05);
   border-radius: 2px;
-  font-family: fantasy;
+  font-family: 'Raleway', 'sans-serif';
   font-weight: bolder;
 }
 
@@ -151,6 +151,10 @@ label {
   box-sizing: border-box;
   display: block;
   padding: 10px 20px;
+}
+
+#range{
+  padding: 0 0 0 0
 }
 
 input {
@@ -195,8 +199,12 @@ input {
 
 /* Konva Board */
 .konvajs-content {
-  margin-top: 5em;
-  margin-left: 0;
+  margin-top: 4em;
+  margin-bottom: 4em;
+  border-radius: 15;
+}
+canvas {
+  border-radius: 15;
 }
 
 .HotPink{
@@ -211,9 +219,6 @@ input {
 .Yellow {
   background-color: #FBE7C6;
 }
-
-
-
 
 .drawTools{
   display: inline-flex;
@@ -258,46 +263,66 @@ input {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: Lucida;
+  background-color: #48BFE3;
+  margin: 10px;
+  padding: 20px;
+  border-radius: 15px;
+  font-family: "Raleway",sans-serif;
   font-weight: bolder;
 }
 
 .gameInfo {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  background-color: #75ABBC;
-  border: black solid 2px;
+  /* background-color: #4EA8DE; */
+  margin: 10px;
+  /* padding: 20px; */
+  border-radius: 15px;
+  font-family: "Raleway",sans-serif;
+  font-weight: bolder;
+  background: linear-gradient(270deg, #80ffdb, #72efdd, #64dfdf, #56cfe1, #48bfe3, #4ea8de, #5390d9, #5e60ce, #6930c3, #7400b8);
+  background-size: 2000% 2000%;
+  animation: AnimationName 30s ease infinite;
 }
 .chatlayout {
-  display: flex;
+  /* display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
-  background-color: #23B5D3;
-  padding: 5px;
-  border: black solid 2px;
+  background-color: #23B5D3; */
+  padding: 20px;
+  /* border: black solid 2px; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #5E60CE;
+  margin: 10px;
+  border-radius: 15px;
+  font-family: "Raleway",sans-serif;
+  font-weight: bolder;
 }
 
 .board {
   display: flex;
-  flex-direction: row;
+  flex-direction: column  ;
   justify-content: center;
   align-items: center;
-  background-color: #75ABBC;
-  padding: 5px;
-  border: black solid 2px;
+  background-color: #7400B8;
+  margin: 10px;
+  border-radius: 15px;
 }
 
 .scoreChat {
   display: flex;
-  flex-direction: column;
+  flex-direction: column  ;
   justify-content: center;
   align-items: center;
-  background-color: #75ABBC;
-  padding: 5px;
-  border: black solid 2px;
+  background-color: #7400B8;
+  margin: 10px;
+  border-radius: 15px;
 }
 
 
@@ -308,7 +333,6 @@ input {
   align-items: center;
   background-color: #48BFE3;
   margin: 10px;
-  padding: 20px;
   border-radius: 15px;
   /* width: 500px; */
 }
@@ -333,4 +357,21 @@ margin: 10px;
   flex-direction: column  ;
   justify-content: center;
   align-items: center;
+}
+
+.spacing {
+padding-left: 30px;
+padding-right: 30px;
+}
+
+/* .backgroundgradiant {
+background: linear-gradient(270deg, #80ffdb, #72efdd, #64dfdf, #56cfe1, #48bfe3, #4ea8de, #5390d9, #5e60ce, #6930c3, #7400b8);
+background-size: 2000% 2000%;
+animation: AnimationName 30s ease infinite;
+} */
+
+@keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
 }
