--- a/public/style.css
+++ b/public/style.css
@@ -410,9 +410,9 @@ animation: AnimationName 30s ease infinite;
     100%{background-position:0% 50%}
 }
 
-.aboutUs {
+.col {
 display: flex;
-flex-direction: column;
+flex-direction: row;
 justify-content: center;
 align-items: center;
 background-color: #48BFE3;
