--- a/public/style.css
+++ b/public/style.css
@@ -100,6 +100,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+
 }
 
 .buttonContainer {
@@ -296,6 +297,7 @@ canvas {
 
 .drawTools{
   display: inline-flex;
+  margin: 5px;
 }
 
 .strokeScale{
